BK/logs/dag_id=first_dag/run_id=manual__2023-12-15T140132.234323+0000/task_id=send_email/attempt=1.log
[2023-12-15T14:01:34.174+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: first_dag.send_email manual__2023-12-15T14:01:32.234323+00:00 [queued]>
[2023-12-15T14:01:34.192+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: first_dag.send_email manual__2023-12-15T14:01:32.234323+00:00 [queued]>
[2023-12-15T14:01:34.193+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-15T14:01:34.211+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): send_email> on 2023-12-15 14:01:32.234323+00:00
[2023-12-15T14:01:34.218+0000] {standard_task_runner.py:57} INFO - Started process 3780 to run task
[2023-12-15T14:01:34.221+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'first_dag', 'send_email', 'manual__2023-12-15T14:01:32.234323+00:00', '--job-id', '34', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmp4tsl1we2']
[2023-12-15T14:01:34.224+0000] {standard_task_runner.py:85} INFO - Job 34: Subtask send_email
[2023-12-15T14:01:34.515+0000] {task_command.py:416} INFO - Running <TaskInstance: first_dag.send_email manual__2023-12-15T14:01:32.234323+00:00 [running]> on host ef1922c04df9
[2023-12-15T14:01:35.006+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='first_dag' AIRFLOW_CTX_TASK_ID='send_email' AIRFLOW_CTX_EXECUTION_DATE='2023-12-15T14:01:32.234323+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-15T14:01:32.234323+00:00'
[2023-12-15T14:01:35.050+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/first_dag.py", line 28, in connect
    cursor.execute(
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "FROM")
LINE 10:             FROM orders_orderitem
                     ^

[2023-12-15T14:01:35.103+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=first_dag, task_id=send_email, execution_date=20231215T140132, start_date=20231215T140134, end_date=20231215T140135
[2023-12-15T14:01:35.121+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 34 for task send_email (ОШИБКА:  ошибка синтаксиса (примерное положение: "FROM")
LINE 10:             FROM orders_orderitem
                     ^
; 3780)
[2023-12-15T14:01:35.157+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-15T14:01:35.215+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
